# cicaddy-gitlab

./: .env.example  .env.mr.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/cicaddy-gitlab/: SKILL.md
.github/scripts/: extract_review_context.py
.github/tasks/: pr_review.yml  pr_review_with_graph.yml
.github/workflows/: pr-review.yml  python-publish.yml
docs/: configuration.md  cron-jobs.md  development.md  env-file-preparation.md  getting-started.md  prompt-engineering-best-practices.md  running-locally.md
examples/prompts/: branch_review.yml  mr_code_review.yml
gitlab/: ai_agent_template.yml  ai_cron_template.yml
src/cicaddy_gitlab/: __init__.py  plugin.py
src/cicaddy_gitlab/agent/: __init__.py  base.py  base_review_agent.py  branch_agent.py  factory.py  mr_agent.py
src/cicaddy_gitlab/config/: __init__.py  settings.py
src/cicaddy_gitlab/gitlab_integration/: __init__.py  analyzer.py
tests/unit/: test_agent_factory.py  test_analyzer.py  test_branch_agent.py  test_settings.py
