[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicaddy-gitlab"
version = "1.1.0"
description = "GitLab platform plugin for cicaddy AI agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "Wayne Sun"}
]
keywords = ["ai", "agent", "mcp", "pipeline", "workflow", "code-review", "gitlab", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Security",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "cicaddy>=0.2.0",
    "python-gitlab>=4.4.0",
]


[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.8",
    "black>=24.0.0",
    "flake8>=7.3.0",
    "isort>=5.13.2",
    "pre-commit>=4.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "aioresponses>=0.7.8",
]

[project.urls]
Homepage = "https://github.com/waynesun09/cicaddy-gitlab"
Documentation = "https://github.com/waynesun09/cicaddy-gitlab/blob/main/docs/"
Repository = "https://github.com/waynesun09/cicaddy-gitlab.git"
Issues = "https://github.com/waynesun09/cicaddy-gitlab/issues"

[project.scripts]
# Backward-compatible aliases pointing to cicaddy's CLI
gitlab-ai-agent = "cicaddy.cli.main:main"
ai-agent = "cicaddy.cli.main:main"

[project.entry-points."cicaddy.agents"]
gitlab = "cicaddy_gitlab.plugin:register_agents"

[project.entry-points."cicaddy.cli_args"]
gitlab = "cicaddy_gitlab.plugin:get_cli_args"

[project.entry-points."cicaddy.env_vars"]
gitlab = "cicaddy_gitlab.plugin:get_env_vars"

[project.entry-points."cicaddy.config_sections"]
gitlab = "cicaddy_gitlab.plugin:config_section"

[project.entry-points."cicaddy.validators"]
gitlab = "cicaddy_gitlab.plugin:validate"

[project.entry-points."cicaddy.settings_loader"]
gitlab = "cicaddy_gitlab.config.settings:load_settings"

[tool.setuptools.packages.find]
where = ["src"]
include = ["cicaddy_gitlab*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | examples
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--asyncio-mode=auto",
    "-ra",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests (deselect with '-m \"not slow\"')",
    "network: Tests requiring network access",
    "mcp: Tests related to MCP functionality",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "*/docs/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
